--- a/.github/workflows/sync_develop-to-devs.yml
+++ b/.github/workflows/sync_develop-to-devs.yml
@@ -4,115 +4,115 @@ on:
     branches:
       - develop
 
-jobs:
-  create_develop-to-tc01d-pr:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: tc01d
-      - name: Reset develop
-        run: |
-          git fetch origin develop:develop
-          git reset --hard develop
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v3
-        with:
-          title: 'Sync develop to tc01d'
-          labels: |
-            automated pr
-          token: ${{secrets.GITHUB_TOKEN}}
-          branch: develop-to-tc01d-update
+# jobs:
+#   create_develop-to-tc01d-pr:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#         with:
+#           ref: tc01d
+#       - name: Reset develop
+#         run: |
+#           git fetch origin develop:develop
+#           git reset --hard develop
+#       - name: Create Pull Request
+#         uses: peter-evans/create-pull-request@v3
+#         with:
+#           title: 'Sync develop to tc01d'
+#           labels: |
+#             automated pr
+#           token: ${{secrets.GITHUB_TOKEN}}
+#           branch: develop-to-tc01d-update
 
-  create_develop-to-tc02d-pr:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: tc02d
-      - name: Reset promotion branch
-        run: |
-          git fetch origin develop:develop
-          git reset --hard develop
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v3
-        with:
-          title: 'Sync develop to tc02d'
-          labels: |
-            automated pr
-          token: ${{secrets.GITHUB_TOKEN}}
-          branch: develop-to-tc02d-update
+#   create_develop-to-tc02d-pr:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#         with:
+#           ref: tc02d
+#       - name: Reset promotion branch
+#         run: |
+#           git fetch origin develop:develop
+#           git reset --hard develop
+#       - name: Create Pull Request
+#         uses: peter-evans/create-pull-request@v3
+#         with:
+#           title: 'Sync develop to tc02d'
+#           labels: |
+#             automated pr
+#           token: ${{secrets.GITHUB_TOKEN}}
+#           branch: develop-to-tc02d-update
 
-  create_develop-tc03d-pr:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: tc03d
-      - name: Reset promotion branch
-        run: |
-          git fetch origin develop:develop
-          git reset --hard develop
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v3
-        with:
-          title: 'Sync develop to tc03d'
-          labels: |
-            automated pr
-          token: ${{secrets.GITHUB_TOKEN}}
-          branch: develop-to-tc03d-update
+#   create_develop-tc03d-pr:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#         with:
+#           ref: tc03d
+#       - name: Reset promotion branch
+#         run: |
+#           git fetch origin develop:develop
+#           git reset --hard develop
+#       - name: Create Pull Request
+#         uses: peter-evans/create-pull-request@v3
+#         with:
+#           title: 'Sync develop to tc03d'
+#           labels: |
+#             automated pr
+#           token: ${{secrets.GITHUB_TOKEN}}
+#           branch: develop-to-tc03d-update
   
 
-  # sync-main-to-tc01d:
-  #   runs-on: ubuntu-latest
-  #   name: Syncing main to tc01d
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v2
-  #     - name: Set up Node
-  #       uses: actions/setup-node@v1
-  #       with:
-  #         node-version: 12
-  #     - name: Opening pull request
-  #       id: pull
-  #       uses: tretuna/sync-branches@1.2.0
-  #       with:
-  #         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-  #         FROM_BRANCH: "main"
-  #         TO_BRANCH: "tc01d"
+#   # sync-main-to-tc01d:
+#   #   runs-on: ubuntu-latest
+#   #   name: Syncing main to tc01d
+#   #   steps:
+#   #     - name: Checkout
+#   #       uses: actions/checkout@v2
+#   #     - name: Set up Node
+#   #       uses: actions/setup-node@v1
+#   #       with:
+#   #         node-version: 12
+#   #     - name: Opening pull request
+#   #       id: pull
+#   #       uses: tretuna/sync-branches@1.2.0
+#   #       with:
+#   #         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+#   #         FROM_BRANCH: "main"
+#   #         TO_BRANCH: "tc01d"
 
-  # sync-main-to-tc02d:
-  #   runs-on: ubuntu-latest
-  #   name: Syncing main to tc01d
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v2
-  #     - name: Set up Node
-  #       uses: actions/setup-node@v1
-  #       with:
-  #         node-version: 12
-  #     - name: Opening pull request
-  #       id: pull
-  #       uses: tretuna/sync-branches@1.2.0
-  #       with:
-  #         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-  #         FROM_BRANCH: "main"
-  #         TO_BRANCH: "tc02d"
+#   # sync-main-to-tc02d:
+#   #   runs-on: ubuntu-latest
+#   #   name: Syncing main to tc01d
+#   #   steps:
+#   #     - name: Checkout
+#   #       uses: actions/checkout@v2
+#   #     - name: Set up Node
+#   #       uses: actions/setup-node@v1
+#   #       with:
+#   #         node-version: 12
+#   #     - name: Opening pull request
+#   #       id: pull
+#   #       uses: tretuna/sync-branches@1.2.0
+#   #       with:
+#   #         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+#   #         FROM_BRANCH: "main"
+#   #         TO_BRANCH: "tc02d"
 
-  # sync-main-to-tc03d:
-  #   runs-on: ubuntu-latest
-  #   name: Syncing main to tc01d
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v2
-  #     - name: Set up Node
-  #       uses: actions/setup-node@v1
-  #       with:
-  #         node-version: 12
-  #     - name: Opening pull request
-  #       id: pull
-  #       uses: tretuna/sync-branches@1.2.0
-  #       with:
-  #         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-  #         FROM_BRANCH: "main"
-  #         TO_BRANCH: "tc03d"
+#   # sync-main-to-tc03d:
+#   #   runs-on: ubuntu-latest
+#   #   name: Syncing main to tc01d
+#   #   steps:
+#   #     - name: Checkout
+#   #       uses: actions/checkout@v2
+#   #     - name: Set up Node
+#   #       uses: actions/setup-node@v1
+#   #       with:
+#   #         node-version: 12
+#   #     - name: Opening pull request
+#   #       id: pull
+#   #       uses: tretuna/sync-branches@1.2.0
+#   #       with:
+#   #         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+#   #         FROM_BRANCH: "main"
+#   #         TO_BRANCH: "tc03d"
