--- a/.github/workflows/provision-to-tc01d-on-pr.yml
+++ b/.github/workflows/provision-to-tc01d-on-pr.yml
@@ -23,8 +23,25 @@ env:
   PYTHON_VERSION: 3.9 # For running pytest "locally", not for C3 env.
 
 jobs:
+  # Gate to check for changed files within the c3repo
+  c3changes:
+    runs-on: ubuntu-latest
+    # Set job outputs to values from filter step
+    outputs:
+      c3repo: ${{ steps.filter.outputs.c3repo }}
+    steps:
+    # For pull requests it's not necessary to checkout the code
+    - uses: dorny/paths-filter@v2
+      id: filter
+      with:
+        filters: |
+          c3repo:
+            - 'training/**'
+
   provision:
     name: Provision to tc01d
+    needs: c3changes
+    if: ${{ needs.c3changes.outputs.c3repo == 'true' }}
     runs-on: ubuntu-latest
     steps:
           
