--- a/.github/workflows/provision-to-tc01d-on-pr.yml
+++ b/.github/workflows/provision-to-tc01d-on-pr.yml
@@ -2,9 +2,9 @@ on:
   pull_request:
     branches:
     - tc01d
-    paths:
-    - 'training/**'
-    - 'test/**'
+#     paths:
+#     - 'training/**'
+#     - 'test/**'
 
 ########################################################################        
 # Settings for this workflow:
