--- a/.github/workflows/automerge_tc01d-to-develop.yml
+++ b/.github/workflows/automerge_tc01d-to-develop.yml
@@ -32,5 +32,5 @@ jobs:
         uses: "pascalgn/automerge-action@v0.14.3"
         env:
           GITHUB_TOKEN: "${{ secrets.DTI_DEVOPS_TOKEN }}"
-          MERGE_METHOD: "merge"
+          MERGE_METHOD: "rebase"
           MERGE_REQUIRED_APPROVALS: "1"
