--- a/.github/workflows/sync_dev-to-develop.yml
+++ b/.github/workflows/sync_dev-to-develop.yml
@@ -73,7 +73,7 @@ jobs:
 #           title: Sync ${{ env.UPDATE_BRANCH }} to ${{ matrix.syncto }}
           labels: |
             automated pr
-            autoapprove
+            automerge
           token: ${{secrets.GITHUB_TOKEN}}
 #           branch: ${{ env.UPDATE_BRANCH }}-to-${{ matrix.syncto }}
           branch: ${{ env.UPDATE_BRANCH }}-to-develop
