--- a/.github/workflows/automerge_tc01d-to-develop.yml
+++ b/.github/workflows/automerge_tc01d-to-develop.yml
@@ -1,3 +1,9 @@
+##########################################################################
+#
+#  Will auto-merge pull request with the label "automerge"
+#
+##########################################################################
+
 name: automerge_tc01d-to-develop
 on:
   pull_request:
@@ -12,16 +18,25 @@ on:
       - unlocked
     branches:
       - develop
+      - tc01d
+      - tc02d
+      - tc03d
   pull_request_review:
     types:
       - submitted
     branches:
       - develop
+      - tc01d
+      - tc02d
+      - tc03d
   check_suite:
     types:
       - completed
     branches:
       - develop
+      - tc01d
+      - tc02d
+      - tc03d
   status: {}
 jobs:
   automerge:
