--- a/.github/workflows/sync_dev-to-develop.yml
+++ b/.github/workflows/sync_dev-to-develop.yml
@@ -56,15 +56,8 @@ jobs:
           ref: develop
 #       - name: Reset Compare Branch
 #         run: |
-#           echo "Ref: ${{ github.event.ref }}"
-#           echo "Ref:: ${GITHUB_REF##*/}"
-#           echo "Update branch: ${{ env.UPDATE_BRANCH }}"
-#           git fetch origin "${{ env.UPDATE_BRANCH }}:${GITHUB_REF##*/}"
-#           git reset --hard ${GITHUB_REF##*/}
-      - name: Reset Compare Branch
-        run: |
-          git fetch origin "${{ env.UPDATE_BRANCH }}:${{ env.UPDATE_BRANCH }}"
-          git reset --hard ${{ env.UPDATE_BRANCH }}
+#           git fetch origin "${{ env.UPDATE_BRANCH }}:${{ env.UPDATE_BRANCH }}"
+#           git reset --hard ${{ env.UPDATE_BRANCH }}
       - name: Create Pull Request
         id: cpr
         uses: peter-evans/create-pull-request@v3
@@ -73,11 +66,10 @@ jobs:
 #           title: Sync ${{ env.UPDATE_BRANCH }} to ${{ matrix.syncto }}
           labels: |
             automated pr
-            automerge
           token: ${{secrets.GITHUB_TOKEN}}
 #           branch: ${{ env.UPDATE_BRANCH }}-to-${{ matrix.syncto }}
-          branch: ${{ env.UPDATE_BRANCH }}-to-develop
-          delete-branch: true
+#           branch: ${{ env.UPDATE_BRANCH }}-to-develop
+          delete-branch: false
       - name: Check outputs
         run: |
           echo "Pull Request Number - ${{ steps.cpr.outputs.pull-request-number }}"
