--- a/.github/workflows/sync_dev-to-develop.yml
+++ b/.github/workflows/sync_dev-to-develop.yml
@@ -50,14 +50,14 @@ jobs:
         id: step_one
         run: |
           echo "UPDATE_BRANCH=`basename $REF`" >> $GITHUB_ENV
-      - uses: actions/checkout@v2
-        with:
-#           ref: ${{ matrix.syncto }}
-          ref: develop
-#       - name: Reset Compare Branch
-#         run: |
-#           git fetch origin "${{ env.UPDATE_BRANCH }}:${{ env.UPDATE_BRANCH }}"
-#           git reset --hard ${{ env.UPDATE_BRANCH }}
+#       - uses: actions/checkout@v2
+#         with:
+# #           ref: ${{ matrix.syncto }}
+#           ref: develop
+# #       - name: Reset Compare Branch
+# #         run: |
+# #           git fetch origin "${{ env.UPDATE_BRANCH }}:${{ env.UPDATE_BRANCH }}"
+# #           git reset --hard ${{ env.UPDATE_BRANCH }}
       - name: Create Pull Request
         id: cpr
         uses: peter-evans/create-pull-request@v3
@@ -69,6 +69,7 @@ jobs:
           token: ${{secrets.GITHUB_TOKEN}}
 #           branch: ${{ env.UPDATE_BRANCH }}-to-${{ matrix.syncto }}
 #           branch: ${{ env.UPDATE_BRANCH }}-to-develop
+          branch: ${{ env.UPDATE_BRANCH }}
           delete-branch: false
       - name: Check outputs
         run: |
