--- a/.github/workflows/sync_dev-to-develop.yml
+++ b/.github/workflows/sync_dev-to-develop.yml
@@ -51,35 +51,42 @@ jobs:
         run: |
           echo "UPDATE_BRANCH=`basename $REF`" >> $GITHUB_ENV
       - uses: actions/checkout@v2
-        with:
-#           ref: ${{ matrix.syncto }}
-          ref: develop
+#         with:
+# #           ref: ${{ matrix.syncto }}
+#           ref: develop
 # #       - name: Reset Compare Branch
 # #         run: |
 # #           git fetch origin "${{ env.UPDATE_BRANCH }}:${{ env.UPDATE_BRANCH }}"
 # #           git reset --hard ${{ env.UPDATE_BRANCH }}
+#       - name: Create Pull Request
+#         id: cpr
+#         uses: peter-evans/create-pull-request@v3
+#         with:
+#           title: Sync ${{ env.UPDATE_BRANCH }} to develop
+# #           title: Sync ${{ env.UPDATE_BRANCH }} to ${{ matrix.syncto }}
+#           labels: |
+#             automated pr
+#           token: ${{secrets.GITHUB_TOKEN}}
+# #           branch: ${{ env.UPDATE_BRANCH }}-to-${{ matrix.syncto }}
+# #           branch: ${{ env.UPDATE_BRANCH }}-to-develop
+#           branch: ${{ env.UPDATE_BRANCH }}
+#           delete-branch: false
       - name: Create Pull Request
         id: cpr
-        uses: peter-evans/create-pull-request@v3
+      - uses: repo-sync/pull-request@v2
         with:
-          title: Sync ${{ env.UPDATE_BRANCH }} to develop
-#           title: Sync ${{ env.UPDATE_BRANCH }} to ${{ matrix.syncto }}
-          labels: |
-            automated pr
-          token: ${{secrets.GITHUB_TOKEN}}
-#           branch: ${{ env.UPDATE_BRANCH }}-to-${{ matrix.syncto }}
-#           branch: ${{ env.UPDATE_BRANCH }}-to-develop
-          branch: ${{ env.UPDATE_BRANCH }}
-          delete-branch: false
+          destination_branch: "develop"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          pr_label: "automated pr"
       - name: Check outputs
         run: |
-          echo "Pull Request Number - ${{ steps.cpr.outputs.pull-request-number }}"
+          echo "Pull Request Number - ${{ steps.cpr.outputs.pr_number }}"
       - name: Approve PR
-        if: "${{ steps.cpr.outputs.pull-request-number }}"
+        if: "${{ steps.cpr.outputs.pr_number }}"
         uses: hmarr/auto-approve-action@v2
         with:
           github-token: "${{ secrets.DTI_DEVOPS_TOKEN }}"
-          pull-request-number:  "${{ steps.cpr.outputs.pull-request-number }}"
+          pull-request-number:  "${{ steps.cpr.outputs.pr_number }}"
 #       - name: Automerge PR
 #         if: "${{ steps.cpr.outputs.pull-request-number }}"
 #         uses: "pascalgn/automerge-action@v0.14.3"
