--- a/.github/workflows/sync_dev-to-develop.yml
+++ b/.github/workflows/sync_dev-to-develop.yml
@@ -33,8 +33,8 @@ jobs:
         with:
           destination_branch: "develop"
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          pr_label: "automated pr"
-          pr_title: "Pulling ${{ env.UPDATE_BRANCH }} into develop"
+          pr_label: "automated pr,automerge"
+          pr_title: "Sync ${{ env.UPDATE_BRANCH }} to develop"
           
       - name: Check outputs
         run: |
