--- a/.github/workflows/sync_dev-to-develop.yml
+++ b/.github/workflows/sync_dev-to-develop.yml
@@ -47,13 +47,13 @@ jobs:
           github-token: "${{ secrets.DTI_DEVOPS_TOKEN }}"
           pull-request-number:  "${{ steps.cpr.outputs.pr_number }}"
           
-      - name: Automerge PR
-        if: "${{ steps.cpr.outputs.pull-request-number }}"
-        uses: "pascalgn/automerge-action@v0.14.3"
-        env:
-          GITHUB_TOKEN: "${{ secrets.DTI_DEVOPS_TOKEN }}"
-          MERGE_METHOD: "merge"
-          MERGE_DELETE_BRANCH: false
-          PULL_REQUEST: "${{ steps.cpr.outputs.pr_number }}"
-          MERGE_REQUIRED_APPROVALS: "1"
+#       - name: Automerge PR
+#         if: "${{ steps.cpr.outputs.pull-request-number }}"
+#         uses: "pascalgn/automerge-action@v0.14.3"
+#         env:
+#           GITHUB_TOKEN: "${{ secrets.DTI_DEVOPS_TOKEN }}"
+#           MERGE_METHOD: "merge"
+#           MERGE_DELETE_BRANCH: false
+#           PULL_REQUEST: "${{ steps.cpr.outputs.pr_number }}"
+#           MERGE_REQUIRED_APPROVALS: "1"
           
