--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -49,4 +49,4 @@ jobs:
           GITHUB_TOKEN: "${{ secrets.DTI_DEVOPS_TOKEN }}"
           MERGE_METHOD: "merge"
           MERGE_REQUIRED_APPROVALS: "1"
-          MERGE_DELETE_BRANCH: true
+          MERGE_DELETE_BRANCH: false
