--- a/.github/workflows/sync_develop-to-devs.yml
+++ b/.github/workflows/sync_develop-to-devs.yml
@@ -46,17 +46,17 @@ jobs:
         with:
           source_branch: "develop"
           destination_branch: "${{ matrix.syncto }}"
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.DTI_DEVOPS_TOKEN }}
           pr_label: "automated pr,automerge"
           pr_title: "Sync develop to ${{ matrix.syncto }}"
           
-      - name: Check outputs
-        run: |
-          echo "Pull Request Number - ${{ steps.cpr.outputs.pr_number }}"
+#       - name: Check outputs
+#         run: |
+#           echo "Pull Request Number - ${{ steps.cpr.outputs.pr_number }}"
           
-      - name: Approve PR
-        if: "${{ steps.cpr.outputs.pr_number }}"
-        uses: hmarr/auto-approve-action@v2
-        with:
-          github-token: "${{ secrets.DTI_DEVOPS_TOKEN }}"
-          pull-request-number:  "${{ steps.cpr.outputs.pr_number }}"
+#       - name: Approve PR
+#         if: "${{ steps.cpr.outputs.pr_number }}"
+#         uses: hmarr/auto-approve-action@v2
+#         with:
+#           github-token: "${{ secrets.DTI_DEVOPS_TOKEN }}"
+#           pull-request-number:  "${{ steps.cpr.outputs.pr_number }}"
