--- a/.github/workflows/provision.yml
+++ b/.github/workflows/provision.yml
@@ -27,13 +27,13 @@ on:
 # Modify the following settings to match target C3 tag and local 
 # c3repo and package names. 
 ########################################################################
-env:
-  DTI_PROVISIONER_VERSION: main
-  TAG: ${{ github.event.inputs.tag }}
-  TENANT: ${{ github.event.inputs.tenant }}
-  DOMAIN: ${{ github.event.inputs.domain }}
-  C3REPO: ${{ github.event.inputs.c3repo }}
-  PACKAGE: ${{ github.event.inputs.package }}
+# env:
+#   DTI_PROVISIONER_VERSION: main
+#   TAG: ${{ github.event.inputs.tag }}
+#   TENANT: ${{ github.event.inputs.tenant }}
+#   DOMAIN: ${{ github.event.inputs.domain }}
+#   C3REPO: ${{ github.event.inputs.c3repo }}
+#   PACKAGE: ${{ github.event.inputs.package }}
 ########################################################################
 # You should not need to edit below here, unless altering the workflow
 ########################################################################
