remove ui components fomr the dev package

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "c3.rootPackage": ""
+    "c3.rootPackage": "dti-jupyter",
+    "c3.connection.vanityUrl": "https://tc01d-dev.c3dti.ai",
+    "c3.connection.tenantTag": "dev/tc01d",
+    "c3.connection.userName": "dadams@illinois.edu"
 }
