--- a/.github/workflows/provision.yml
+++ b/.github/workflows/provision.yml
@@ -66,7 +66,8 @@ jobs:
       with:
         filters: |
           c3repo:
-            - 'c3training/**'
+            - ${{ inputs.c3repo }}
+#            - 'c3training/**'
   provision:
     name: Provision to ${{ inputs.tag }}
     needs: c3changes
