--- a/.github/workflows/provision.yml
+++ b/.github/workflows/provision.yml
@@ -66,7 +66,7 @@ jobs:
       with:
         filters: |
           c3repo:
-            - ${{ inputs.c3repo }}
+            - "${{ inputs.c3repo }}/**"
 #            - 'c3training/**'
   provision:
     name: Provision to ${{ inputs.tag }}
