--- a/.github/workflows/provision.yml
+++ b/.github/workflows/provision.yml
@@ -52,7 +52,7 @@ jobs:
       - run: echo "Event name " ${{ github.event_name }}
       - name: Checkout this repo
         # For pull requests it's not necessary to checkout the code
-        if: ${{ github.event_name }} != 'pull_request'
+        if: ${{ github.event_name != 'pull_request' }}
         uses: actions/checkout@v2
       - uses: dorny/paths-filter@v2
         id: filter
