--- a/.github/workflows/provision-to-tc01d-on-pr-to-tc01d.yml
+++ b/.github/workflows/provision-to-tc01d-on-pr-to-tc01d.yml
@@ -20,6 +20,7 @@ jobs:
     with:
       tenant: 'dev'
       tag: 'tc01d'
+      branch: 'tc01d'
       domain: 'c3dti.ai'
       package: 'dti-jupyter'
       c3repo: 'training'
