--- a/.github/workflows/provision-to-qa01d-on-pr-to-qa01d.yml
+++ b/.github/workflows/provision-to-qa01d-on-pr-to-qa01d.yml
@@ -20,6 +20,7 @@ jobs:
     with:
       tenant: 'dti-qa'
       tag: 'qa01d'
+      branch: 'qa01d'
       domain: 'sboxazdti.c3aids.cloud'
       package: 'dti-jupyter'
       c3repo: 'training'
