--- a/.github/workflows/provision-to-tc01d-on-pr-to-tc01d.yml
+++ b/.github/workflows/provision-to-tc01d-on-pr-to-tc01d.yml
@@ -25,7 +25,7 @@ jobs:
       package: 'dti-jupyter'
       c3repo: 'training'
       options: ''
-      version: 'main'
+      version: 'add-ttag'
     secrets:
       token: ${{ secrets.DTI_DEVOPS_TOKEN }}
       gpg: ${{ secrets.DTI_DEVOPS_GPG }}
