--- a/.github/workflows/provision-to-qa01d-on-pr-to-qa01d.yml
+++ b/.github/workflows/provision-to-qa01d-on-pr-to-qa01d.yml
@@ -24,7 +24,7 @@ jobs:
       domain: 'sboxazdti.c3aids.cloud'
       package: 'dti-jupyter'
       c3repo: 'training'
-      options: ''
+      options: ${{ github.event.inputs.options }}
       version: 'main'
     secrets:
       token: ${{ secrets.DTI_DEVOPS_TOKEN }}
