--- a/.github/workflows/get-key.yml
+++ b/.github/workflows/get-key.yml
@@ -28,10 +28,9 @@ on:
         required: true
       gpg:
         required: true
-        
- get-key:
+jobs:   
+  get-key:
     name: Provision to ${{ inputs.tag }}
-    needs: c3changes
     runs-on: ubuntu-latest
     steps:
           
